deploy/yc-sirius/edu-hopeful-ritchie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: edu-hopeful-ritchie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: anton358/django-app:c209315b94567753cb8acbd868a0ceb71dd54a1b
          volumeMounts:
            - name: ssl-certs
              mountPath: /root/.postgresql
              readOnly: true

      volumes:
        - name: ssl-certs
          secret:
            secretName: postgres-ssl-cert
            defaultMode: 0600
